fixed handler, fixed errors, removed ponters in business logic for replay servce
