# internal/handler/v1/upload_replay.go
@@ -1,7 +1,6 @@
 package v1
 
 import (
-	"context"
 	"errors"
 	"fmt"
 	"io"
@@ -14,7 +13,8 @@ import (
 	"go.uber.org/zap"
 
 	"github.com/ssssargsian/uniplay/internal/domain"
-	"github.com/ssssargsian/uniplay/internal/dto"
+	"github.com/ssssargsian/uniplay/internal/pkg/apperror"
+
 	v1 "github.com/ssssargsian/uniplay/internal/gen/oapi/v1"
 )
 
@@ -22,25 +22,25 @@ func (h *handler) UploadReplay(w http.ResponseWriter, r *http.Request) {
 	r.Body = http.MaxBytesReader(w, r.Body, 160<<20) // max body size is 300 mb
 
 	if err := r.ParseMultipartForm(64 << 20); err != nil { // 64 mb
-		writeError(w, http.StatusBadRequest, fmt.Errorf("r.ParseMultipartForm: %w", err))
+		apperror.Write(w, http.StatusBadRequest, fmt.Errorf("r.ParseMultipartForm: %w", err))
 		return
 	}
 
 	file, fileHeader, err := r.FormFile("replay")
 	if err != nil {
-		writeError(w, http.StatusBadRequest, fmt.Errorf("r.FormFile: %w", err))
+		apperror.Write(w, http.StatusBadRequest, fmt.Errorf("r.FormFile: %w", err))
 		return
 	}
 	defer file.Close()
 
 	filenameParts := strings.Split(fileHeader.Filename, ".")
 	if filenameParts[len(filenameParts)-1] != "dem" {
-		writeError(w, http.StatusBadRequest, errInvalidBodyContentType)
+		apperror.Write(w, http.StatusBadRequest, errInvalidReplayFileExtension)
 		return
 	}
 
 	if err = os.MkdirAll("./tmp", os.ModePerm); err != nil {
-		writeError(w, http.StatusInternalServerError, fmt.Errorf("os.MkdirAll: %w", err))
+		apperror.Write(w, http.StatusInternalServerError, fmt.Errorf("os.MkdirAll: %w", err))
 		return
 	}
 
@@ -48,45 +48,41 @@ func (h *handler) UploadReplay(w http.ResponseWriter, r *http.Request) {
 
 	dest, err := os.Create(replayFilename)
 	if err != nil {
-		writeError(w, http.StatusInternalServerError, fmt.Errorf("os.Create: %w", err))
+		apperror.Write(w, http.StatusInternalServerError, fmt.Errorf("os.Create: %w", err))
 		return
 	}
 	defer dest.Close()
+
 	defer func() {
 		if err := os.Remove(replayFilename); err != nil {
-			writeError(w, http.StatusInternalServerError, fmt.Errorf("os.Remove: %w", err))
+			apperror.Write(w, http.StatusInternalServerError, fmt.Errorf("os.Remove: %w", err))
 			return
 		}
 	}()
 
 	if _, err = io.Copy(dest, file); err != nil {
-		writeError(w, http.StatusInternalServerError, fmt.Errorf("io.Copy: %w", err))
+		apperror.Write(w, http.StatusInternalServerError, fmt.Errorf("io.Copy: %w", err))
 		return
 	}
 
-	// TODO: REWRITE FIX FIX FIX
-	var match *dto.Match
-	err = h.atomic.Run(r.Context(), func(txCtx context.Context) error {
-		match, err = h.replay.CollectStats(txCtx, replayFilename)
-		return err
-	})
+	match, err := h.replay.CollectStats(r.Context(), replayFilename)
 	if err != nil {
 		h.log.Error("http - v1 - handler.UploadReplay", zap.Error(err))
 
 		switch {
 		case errors.Is(err, domain.ErrMatchAlreadyExist):
-			writeError(w, http.StatusConflict, err)
+			apperror.Write(w, http.StatusConflict, err)
 			return
 		}
 
-		writeError(w, http.StatusInternalServerError, err)
+		apperror.Write(w, http.StatusInternalServerError, err)
 		return
 	}
 
 	writeBody(w, http.StatusOK, v1.Match{
+		MatchID:       match.ID,
 		MapName:       match.MapName,
 		MatchDuration: match.Duration,
-		MatchID:       match.ID.UUID,
 		Team1: v1.MatchTeam{
 			ClanName:       match.Team1.ClanName,
 			FlagCode:       match.Team1.FlagCode,
@@ -99,6 +95,6 @@ func (h *handler) UploadReplay(w http.ResponseWriter, r *http.Request) {
 			PlayerSteamIds: match.Team2.PlayerSteamIDs,
 			Score:          match.Team2.Score,
 		},
-		UploadTime: match.UploadTime,
+		UploadedAt: match.UploadedAt,
 	})
 }
